# MapBuilderWin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.bat  build_debug.bat  compat.h  main.c  models.h  preview.c  rlights.h  whale.h
models/: rock1.glb  tree_bg.glb  whale.glb
shaders/120/: height_color.fs  height_color.vs  height_color_lighting.fs  height_color_lighting.vs  lighting_star.fs  lighting_star.vs  lightning_bug.fs  lightning_bug.vs  water.fs  water.vs
skybox/: balance.py
